@@ -1,6 +1,8 @@
 2.1.0 (TBD)
 
 Added:
+- Support for catalog source publishing stages has been added to
+  subscription_request.catalog_source ().
 - A subscription_request.planetary_variable_source function has been added
   (#976).
 - The subscription_request.build_request function has a new option to clip to
